--- a/task-tracker/src/app/components/task-item/task-item.component.html
+++ b/task-tracker/src/app/components/task-item/task-item.component.html
@@ -1,1 +1,6 @@
-<p>task-item works!</p>
+<div class="task">
+    <h3>{{ task.text }}
+        <fa-icon (click)="onDelete(task)" [ngStyle]="{'color': 'red'}" [icon]="faTimes"></fa-icon>
+    </h3>
+    <p>{{ task.day }}</p>
+</div>
